--- a/notetakers/agent/rough.ipynb
+++ b/notetakers/agent/rough.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "680877cf",
+   "id": "b5f353b4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "3cb4935a",
+   "id": "298950e1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "7cde3d87",
+   "id": "ef5fb3d5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3a44c050",
+   "id": "64ab97f0",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -68,7 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "244804d1",
+   "id": "e8596135",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,8 +140,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
-   "id": "8930e1e2",
+   "execution_count": 46,
+   "id": "d2c7c621",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "clean = clean_transcript(transcript)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "a3bda2e9",
    "metadata": {},
    "outputs": [
     {
@@ -165,27 +175,194 @@
        "  'content': 'plan on doing this up with a super based instance. And take notes that I can refer to deliver maybe also potentially burn like notion plugins and stuff. Like that googledog plugins will be pretty cool to build And the way I program it just in the call for about 15 more seconds. I made it manually. Leave the call about minute daily because I just want to test it out here.'}]"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "clean_transcript(transcript)"
+    "clean"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "4a92d5ed",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from dotenv import load_dotenv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "4b45ddc6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "load_dotenv()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "1266f27b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'[{\\'date\\': \\'2024-11-26\\', \\'time\\': \\'16:08:49\\', \\'user\\': \\'Saarth Shah\\', \\'content\\': \"That\\'s about.\"}, {\\'date\\': \\'2024-11-26\\', \\'time\\': \\'16:09:05\\', \\'user\\': \\'Saarth Shah\\', \\'content\\': \"That\\'s about it. Okay, now it should be storing the transcript from here on. So this whole process takes about a couple of like a minute or so I\\'d say so we can make the agent, join the column a minute earlier and by the way, I haven\\'t programmed a back end just yet. This is completely running on my local machine but\"}, {\\'date\\': \\'2024-11-26\\', \\'time\\': \\'16:09:21\\', \\'user\\': \\'Saarth Shah\\', \\'content\\': \"say so we can make the agent, join the column a minute earlier and by the way, I haven\\'t programmed a back end just yet. This is completely running on my local machine but I do plan on doing this up with a super based instance. So I can, you know, put everything into a Web app, have it automatically joined my Google meeting. and take notes and that I can refer to deliver maybe also potentially burn like notion plugins and\"}, {\\'date\\': \\'2024-11-26\\', \\'time\\': \\'16:09:36\\', \\'user\\': \\'Saarth Shah\\', \\'content\\': \\'plan on doing this up with a super based instance. And take notes that I can refer to deliver maybe also potentially burn like notion plugins and stuff. Like that googledog plugins will be pretty cool to build And the way I program it just in the call for about 15 more seconds. I made it manually. Leave the call about minute daily because I just want to test it out here.\\'}]'"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"\".join(str(clean))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "id": "c693da58",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pydantic import BaseModel\n",
+    "from openai import OpenAI\n",
+    "\n",
+    "client = OpenAI()\n",
+    "\n",
+    "class SummaryEvent(BaseModel):\n",
+    "    summary: str\n",
+    "    action_items: list[str]\n",
+    "\n",
+    "completion = client.beta.chat.completions.parse(\n",
+    "    model=\"gpt-4o-2024-08-06\",\n",
+    "    messages=[\n",
+    "        {\"role\": \"system\", \"content\": \"Extract a detailed summary and action items from the transcript\"},\n",
+    "        {\"role\": \"user\", \"content\": \"\".join(str(clean))},\n",
+    "    ],\n",
+    "    response_format=SummaryEvent,\n",
+    ")\n",
+    "\n",
+    "event = completion.choices[0].message.parsed"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "id": "c6cffae1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Saarth Shah is developing a system for automatically joining and taking notes in Google meetings. Currently, the system is running locally without a backend but plans are underway to integrate it with a Supabase instance for deployment as a web app. This would automate the process allowing for functionalities such as joining meetings, taking notes, and possibly using plugins like Notion or Google Docs for enhanced features. The current prototype is manually programmed to leave calls after a set duration to facilitate testing.'"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "event.summary"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "id": "399a1e52",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Complete backend integration using Supabase.',\n",
+       " 'Develop a web app interface for accessibility and deployment.',\n",
+       " 'Incorporate note-taking capabilities in the system.',\n",
+       " 'Consider integrating Notion and Google Docs plugins for additional functionalities.',\n",
+       " 'Test the meeting joining and note-taking automation thoroughly.']"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "event.action_items"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "id": "9cab5d61",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def summarizeTranscript(transcript, prompt=\"\"):\n",
+    "    completion = client.beta.chat.completions.parse(\n",
+    "    model=\"gpt-4o-2024-08-06\",\n",
+    "    messages=[\n",
+    "        {\"role\": \"system\", \"content\": \"Extract a detailed summary and action items from the transcript\" + prompt},\n",
+    "        {\"role\": \"user\", \"content\": transcript}\n",
+    "    ],\n",
+    "        response_format=SummaryEvent,\n",
+    "    )\n",
+    "\n",
+    "    event = completion.choices[0].message.parsed\n",
+    "    \n",
+    "    return {\"summary\":event.summary,\n",
+    "            \"action_items\":event.action_items}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "id": "7ddee36f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'summary': 'Saarth Shah discusses the process of storing transcripts from a Google meeting and mentions that the entirety of the system currently runs on his local machine, lacking a back-end implementation. He plans to migrate the setup to a Superbase instance, enabling it to integrate more efficiently into a web app. This setup will allow the agent to automatically join meetings, take notes, and potentially integrate with Google Docs and Notion plugins. The agent is manually programmed to join meetings a minute early and leave after a set time for testing purposes.',\n",
+       " 'action_items': ['Develop a back-end system for the current local machine setup.',\n",
+       "  'Set up a Superbase instance for better integration and scalability.',\n",
+       "  'Create a web app to automate the joining and note-taking during meetings.',\n",
+       "  'Explore integration options with Google Docs and Notion plugins.',\n",
+       "  \"Test the timing settings for the agent's joining and leaving the meeting calls.\"]}"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "summarizeTranscript(\"\".join(str(clean)))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3c416fb2",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "337aae2c",
+   "id": "b895b83e",
    "metadata": {},
    "outputs": [],
    "source": []
