--- a/notetakers/agent/rough.ipynb
+++ b/notetakers/agent/rough.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "b5f353b4",
+   "id": "7c92f24e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "298950e1",
+   "id": "26cf7423",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "ef5fb3d5",
+   "id": "4342fdbf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "64ab97f0",
+   "id": "f6116cef",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -68,7 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "e8596135",
+   "id": "98cb89d9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +141,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "d2c7c621",
+   "id": "1873dad2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,7 +151,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "a3bda2e9",
+   "id": "05aa7a46",
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +187,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "4a92d5ed",
+   "id": "be1e7854",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +197,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "4b45ddc6",
+   "id": "34e01bd0",
    "metadata": {},
    "outputs": [
     {
@@ -218,7 +218,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "1266f27b",
+   "id": "2240c911",
    "metadata": {},
    "outputs": [
     {
@@ -239,7 +239,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "c693da58",
+   "id": "9b9f3115",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,7 +267,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "c6cffae1",
+   "id": "e2f06120",
    "metadata": {},
    "outputs": [
     {
@@ -288,7 +288,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "399a1e52",
+   "id": "8555a04f",
    "metadata": {},
    "outputs": [
     {
@@ -313,7 +313,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "9cab5d61",
+   "id": "f96a3cc8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -336,7 +336,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "7ddee36f",
+   "id": "bc93c80d",
    "metadata": {},
    "outputs": [
     {
@@ -361,8 +361,50 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 73,
+   "id": "78522f79",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import aiohttp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "id": "4df09fb6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "id": "c2bb097c",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "Exception",
+     "evalue": "Failed to set up event subscription",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mException\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[76], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m res \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mawait\u001b[39;00m sync_google_calendar(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m1//06gVSfDNTDylGCgYIARAAGAYSNwF-L9IrGdh3BgDbd0C0Ysb9A58q5d6FUm9lkhyzWEA0IOyv1DGwoUIiVBmaHwsqa05PFp2q1KE\u001b[39m\u001b[38;5;124m'\u001b[39m,\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mb63143f6-ce59-465f-b166-4fe7139cd381\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
+      "Cell \u001b[0;32mIn[74], line 12\u001b[0m, in \u001b[0;36msync_google_calendar\u001b[0;34m(refresh_token, user_id)\u001b[0m\n\u001b[1;32m      9\u001b[0m meet_events \u001b[38;5;241m=\u001b[39m [event \u001b[38;5;28;01mfor\u001b[39;00m event \u001b[38;5;129;01min\u001b[39;00m events \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mhangoutLink\u001b[39m\u001b[38;5;124m'\u001b[39m \u001b[38;5;129;01min\u001b[39;00m event]\n\u001b[1;32m     11\u001b[0m \u001b[38;5;66;03m# Step 4: Set up subscriptions for changes in events\u001b[39;00m\n\u001b[0;32m---> 12\u001b[0m \u001b[38;5;28;01mawait\u001b[39;00m setup_event_subscriptions(access_token, user_id)\n\u001b[1;32m     14\u001b[0m \u001b[38;5;66;03m# Step 5: Push events to Supabase\u001b[39;00m\n\u001b[1;32m     15\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m event \u001b[38;5;129;01min\u001b[39;00m meet_events:\n",
+      "Cell \u001b[0;32mIn[74], line 69\u001b[0m, in \u001b[0;36msetup_event_subscriptions\u001b[0;34m(access_token, user_id)\u001b[0m\n\u001b[1;32m     67\u001b[0m \u001b[38;5;28;01masync\u001b[39;00m \u001b[38;5;28;01mwith\u001b[39;00m session\u001b[38;5;241m.\u001b[39mpost(url, headers\u001b[38;5;241m=\u001b[39mheaders, json\u001b[38;5;241m=\u001b[39mdata) \u001b[38;5;28;01mas\u001b[39;00m response:\n\u001b[1;32m     68\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m response\u001b[38;5;241m.\u001b[39mstatus \u001b[38;5;241m!=\u001b[39m \u001b[38;5;241m200\u001b[39m:\n\u001b[0;32m---> 69\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mFailed to set up event subscription\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[0;31mException\u001b[0m: Failed to set up event subscription"
+     ]
+    }
+   ],
+   "source": [
+    "res = await sync_google_calendar('1//06gVSfDNTDylGCgYIARAAGAYSNwF-L9IrGdh3BgDbd0C0Ysb9A58q5d6FUm9lkhyzWEA0IOyv1DGwoUIiVBmaHwsqa05PFp2q1KE','b63143f6-ce59-465f-b166-4fe7139cd381')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "b895b83e",
+   "id": "4cc3a9ac",
    "metadata": {},
    "outputs": [],
    "source": []
