Cron server working

--- a/notetakers/agent/rough.ipynb
+++ b/notetakers/agent/rough.ipynb
@@ -403,8 +403,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "4cc3a9ac",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'status': 'Task scheduled', 'task_id': 'sync-calendar-task'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "import requests\n",
+    "from datetime import datetime, timedelta\n",
+    "\n",
+    "# Calculate the run time 5 minutes from now\n",
+    "run_time = (datetime.utcnow() + timedelta(seconds=30)).strftime('%Y-%m-%d %H:%M:%S')\n",
+    "\n",
+    "# Define the task details\n",
+    "task_data = {\n",
+    "    \"task_id\": \"sync-calendar-task\",\n",
+    "    \"run_time\": run_time,\n",
+    "    \"link\": \"http://localhost:8000/sync-calendar\",\n",
+    "    \"headers\": {\"Content-Type\": \"application/json\"},\n",
+    "    \"body\": {\"user_id\": \"b63143f6-ce59-465f-b166-4fe7139cd381\"}\n",
+    "}\n",
+    "\n",
+    "# Schedule the task\n",
+    "response = requests.post(\"http://localhost:8050/schedule-task\", json=task_data)\n",
+    "\n",
+    "# Print the response\n",
+    "print(response.json())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "84b24988",
    "metadata": {},
    "outputs": [],
    "source": []
