--- a/notetakers/agent/rough.ipynb
+++ b/notetakers/agent/rough.ipynb
@@ -403,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "4cc3a9ac",
    "metadata": {},
    "outputs": [
@@ -432,7 +432,7 @@
     "}\n",
     "\n",
     "# Schedule the task\n",
-    "response = requests.post(\"http://localhost:8050/schedule-task\", json=task_data)\n",
+    "response = requests.post(\"http://ng0o4wc4cc0okkggcswcso8g.13.57.250.87.sslip.io/schedule-task\", json=task_data)\n",
     "\n",
     "# Print the response\n",
     "print(response.json())"
