Everything seems to be working now!!!!

--- a/notetakers/google_meet/practice.ipynb
+++ b/notetakers/google_meet/practice.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "4addd2be",
+   "id": "f68db772",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "7add11b7",
+   "id": "b9253e9d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "33b9ce7f",
+   "id": "cdbaf745",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "ecb301c8",
+   "id": "64fb672c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "f6782e92",
+   "id": "ec1a5f15",
    "metadata": {},
    "outputs": [
     {
@@ -1503,7 +1503,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "ac5ea609",
+   "id": "b7e9ec14",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1513,7 +1513,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "185f261f",
+   "id": "735c0f5a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1522,8 +1522,110 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 21,
+   "id": "c12b076b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "event = [{'kind': 'calendar#event', 'etag': '\"3470419487670000\"', 'id': '_60o46dpl8h146b9m6t23ib9k6l142ba28h14aba26923aha26l0kcci18g', 'status': 'confirmed', 'htmlLink': 'https://www.google.com/calendar/event?eid=XzYwbzQ2ZHBsOGgxNDZiOW02dDIzaWI5azZsMTQyYmEyOGgxNGFiYTI2OTIzYWhhMjZsMGtjY2kxOGcgc2FhcnRoQGJlcmtlbGV5LmVkdQ', 'created': '2024-12-23T08:07:58.000Z', 'updated': '2024-12-26T10:42:23.835Z', 'summary': 'Test Event', 'location': 'https://meet.google.com/fzr-mwyc-qgt?pli=1', 'creator': {'email': 'saarth@berkeley.edu', 'self': True}, 'organizer': {'email': '2_ge3dkobtg42tsobwguytmnjygmyw6g7x7h3r4yspe35glffiktoct3fnut6xhjvdlzwgbbiuvdxlw@imip.me.com', 'displayName': 'Saarth Shah'}, 'start': {'dateTime': '2024-12-26T02:43:00-08:00', 'timeZone': 'America/Los_Angeles'}, 'end': {'dateTime': '2024-12-26T02:46:00-08:00', 'timeZone': 'America/Los_Angeles'}, 'iCalUID': '00C75DBC-67D9-45BA-BDBE-B2D5EB5AF2AD', 'sequence': 30, 'attendees': [{'email': 'saarth@berkeley.edu', 'self': True, 'responseStatus': 'needsAction'}, {'email': '2_ge3dkobtg42tsobwguytmnjygmyw6g7x7h3r4yspe35glffiktoct3fnut6xhjvdlzwgbbiuvdxlw@imip.me.com', 'displayName': 'Saarth Shah', 'organizer': True, 'responseStatus': 'accepted'}], 'guestsCanInviteOthers': False, 'privateCopy': True, 'reminders': {'useDefault': True}, 'eventType': 'default'}]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "7545a8d5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import re"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "72a321ad",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "def get_meeting_link(event):\n",
+    "    # Check for 'hangoutLink' in the event\n",
+    "    if 'hangoutLink' in event and event['hangoutLink']:\n",
+    "        print(\"Found hangoutLink:\", event['hangoutLink'])\n",
+    "        return event['hangoutLink']\n",
+    "    \n",
+    "    # Define a regex pattern to match valid meeting URLs, allowing optional query parameters\n",
+    "    meeting_url_pattern = re.compile(r'(https?://(?:meet\\.google\\.com|zoom\\.us|teams\\.microsoft\\.com)/[^\\s?]+(?:\\?[^\\s]*)?)')\n",
+    "    \n",
+    "    # Check for a meeting link in the 'description'\n",
+    "    if 'description' in event:\n",
+    "        match = meeting_url_pattern.search(event['description'])\n",
+    "        if match:\n",
+    "            print(\"Found link in description:\", match.group(0))\n",
+    "            return match.group(0)\n",
+    "    \n",
+    "    # Check for a meeting link in the 'location'\n",
+    "    if 'location' in event:\n",
+    "        match = meeting_url_pattern.search(event['location'])\n",
+    "        if match:\n",
+    "            print(\"Found link in location:\", match.group(0))\n",
+    "            return match.group(0)\n",
+    "    \n",
+    "    # Return an empty string if no meeting link is found\n",
+    "    print(\"No meeting link found.\")\n",
+    "    return \"\"\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "b9fe168a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found link in location: https://meet.google.com/fzr-mwyc-qgt?pli=1\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'https://meet.google.com/fzr-mwyc-qgt?pli=1'"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_meeting_link(event[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "4ea5bf17",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'kind': 'calendar#event', 'etag': '\"3470419487670000\"', 'id': '_60o46dpl8h146b9m6t23ib9k6l142ba28h14aba26923aha26l0kcci18g', 'status': 'confirmed', 'htmlLink': 'https://www.google.com/calendar/event?eid=XzYwbzQ2ZHBsOGgxNDZiOW02dDIzaWI5azZsMTQyYmEyOGgxNGFiYTI2OTIzYWhhMjZsMGtjY2kxOGcgc2FhcnRoQGJlcmtlbGV5LmVkdQ', 'created': '2024-12-23T08:07:58.000Z', 'updated': '2024-12-26T10:42:23.835Z', 'summary': 'Test Event', 'location': 'https://meet.google.com/fzr-mwyc-qgt?pli=1', 'creator': {'email': 'saarth@berkeley.edu', 'self': True}, 'organizer': {'email': '2_ge3dkobtg42tsobwguytmnjygmyw6g7x7h3r4yspe35glffiktoct3fnut6xhjvdlzwgbbiuvdxlw@imip.me.com', 'displayName': 'Saarth Shah'}, 'start': {'dateTime': '2024-12-26T02:43:00-08:00', 'timeZone': 'America/Los_Angeles'}, 'end': {'dateTime': '2024-12-26T02:46:00-08:00', 'timeZone': 'America/Los_Angeles'}, 'iCalUID': '00C75DBC-67D9-45BA-BDBE-B2D5EB5AF2AD', 'sequence': 30, 'attendees': [{'email': 'saarth@berkeley.edu', 'self': True, 'responseStatus': 'needsAction'}, {'email': '2_ge3dkobtg42tsobwguytmnjygmyw6g7x7h3r4yspe35glffiktoct3fnut6xhjvdlzwgbbiuvdxlw@imip.me.com', 'displayName': 'Saarth Shah', 'organizer': True, 'responseStatus': 'accepted'}], 'guestsCanInviteOthers': False, 'privateCopy': True, 'reminders': {'useDefault': True}, 'eventType': 'default'}]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(event)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "6caab039",
+   "id": "eb04240e",
    "metadata": {},
    "outputs": [],
    "source": []
