Linking up everything together

--- a/server/notetakers/zoom/test.ipynb
+++ b/server/notetakers/zoom/test.ipynb
@@ -634,8 +634,167 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "909e1c68",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "events = [{'kind': 'calendar#event', 'etag': '\"3472607247820000\"', 'id': '5v366dha5a2h758akj4242bv80', 'status': 'confirmed', 'htmlLink': 'https://www.google.com/calendar/event?eid=NXYzNjZkaGE1YTJoNzU4YWtqNDI0MmJ2ODAgc2FhcnRoQGJlcmtlbGV5LmVkdQ', 'created': '2025-01-08T02:33:43.000Z', 'updated': '2025-01-08T02:33:43.910Z', 'summary': 'Saarth ', 'creator': {'email': 'csp82@cornell.edu'}, 'organizer': {'email': 'csp82@cornell.edu'}, 'start': {'dateTime': '2025-01-08T13:00:00-08:00', 'timeZone': 'America/Chicago'}, 'end': {'dateTime': '2025-01-08T14:00:00-08:00', 'timeZone': 'America/Chicago'}, 'iCalUID': '5v366dha5a2h758akj4242bv80@google.com', 'sequence': 0, 'attendees': [{'email': 'saarth@berkeley.edu', 'self': True, 'responseStatus': 'needsAction'}, {'email': 'csp82@cornell.edu', 'organizer': True, 'responseStatus': 'accepted'}], 'reminders': {'useDefault': True}, 'eventType': 'default'}, {'kind': 'calendar#event', 'etag': '\"3472622104340000\"', 'id': '_8d2k2c1p6gpj0b9n8ooj2b9k74s4cba16ksjib9j60ok4cpm60p4ae9o68', 'status': 'confirmed', 'htmlLink': 'https://www.google.com/calendar/event?eid=XzhkMmsyYzFwNmdwajBiOW44b29qMmI5azc0czRjYmExNmtzamliOWo2MG9rNGNwbTYwcDRhZTlvNjggc2FhcnRoQGJlcmtlbGV5LmVkdQ', 'created': '2025-01-08T04:37:32.000Z', 'updated': '2025-01-08T04:37:32.170Z', 'summary': 'Test Event', 'location': 'https://us05web.zoom.us/j/87150720918?pwd=HZabaLMR3mUi7aJL2YO6uCN5jHvuCb.1', 'creator': {'email': 'saarth@berkeley.edu', 'self': True}, 'organizer': {'email': 'saarth@berkeley.edu', 'self': True}, 'start': {'dateTime': '2025-01-07T21:00:00-08:00', 'timeZone': 'America/Los_Angeles'}, 'end': {'dateTime': '2025-01-07T21:15:00-08:00', 'timeZone': 'America/Los_Angeles'}, 'iCalUID': 'CEA09430-7F11-498F-A599-301B3602E982', 'sequence': 0, 'reminders': {'useDefault': True}, 'eventType': 'default'}]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "fb643eb1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'kind': 'calendar#event',\n",
+       "  'etag': '\"3472607247820000\"',\n",
+       "  'id': '5v366dha5a2h758akj4242bv80',\n",
+       "  'status': 'confirmed',\n",
+       "  'htmlLink': 'https://www.google.com/calendar/event?eid=NXYzNjZkaGE1YTJoNzU4YWtqNDI0MmJ2ODAgc2FhcnRoQGJlcmtlbGV5LmVkdQ',\n",
+       "  'created': '2025-01-08T02:33:43.000Z',\n",
+       "  'updated': '2025-01-08T02:33:43.910Z',\n",
+       "  'summary': 'Saarth ',\n",
+       "  'creator': {'email': 'csp82@cornell.edu'},\n",
+       "  'organizer': {'email': 'csp82@cornell.edu'},\n",
+       "  'start': {'dateTime': '2025-01-08T13:00:00-08:00',\n",
+       "   'timeZone': 'America/Chicago'},\n",
+       "  'end': {'dateTime': '2025-01-08T14:00:00-08:00',\n",
+       "   'timeZone': 'America/Chicago'},\n",
+       "  'iCalUID': '5v366dha5a2h758akj4242bv80@google.com',\n",
+       "  'sequence': 0,\n",
+       "  'attendees': [{'email': 'saarth@berkeley.edu',\n",
+       "    'self': True,\n",
+       "    'responseStatus': 'needsAction'},\n",
+       "   {'email': 'csp82@cornell.edu',\n",
+       "    'organizer': True,\n",
+       "    'responseStatus': 'accepted'}],\n",
+       "  'reminders': {'useDefault': True},\n",
+       "  'eventType': 'default'},\n",
+       " {'kind': 'calendar#event',\n",
+       "  'etag': '\"3472622104340000\"',\n",
+       "  'id': '_8d2k2c1p6gpj0b9n8ooj2b9k74s4cba16ksjib9j60ok4cpm60p4ae9o68',\n",
+       "  'status': 'confirmed',\n",
+       "  'htmlLink': 'https://www.google.com/calendar/event?eid=XzhkMmsyYzFwNmdwajBiOW44b29qMmI5azc0czRjYmExNmtzamliOWo2MG9rNGNwbTYwcDRhZTlvNjggc2FhcnRoQGJlcmtlbGV5LmVkdQ',\n",
+       "  'created': '2025-01-08T04:37:32.000Z',\n",
+       "  'updated': '2025-01-08T04:37:32.170Z',\n",
+       "  'summary': 'Test Event',\n",
+       "  'location': 'https://us05web.zoom.us/j/87150720918?pwd=HZabaLMR3mUi7aJL2YO6uCN5jHvuCb.1',\n",
+       "  'creator': {'email': 'saarth@berkeley.edu', 'self': True},\n",
+       "  'organizer': {'email': 'saarth@berkeley.edu', 'self': True},\n",
+       "  'start': {'dateTime': '2025-01-07T21:00:00-08:00',\n",
+       "   'timeZone': 'America/Los_Angeles'},\n",
+       "  'end': {'dateTime': '2025-01-07T21:15:00-08:00',\n",
+       "   'timeZone': 'America/Los_Angeles'},\n",
+       "  'iCalUID': 'CEA09430-7F11-498F-A599-301B3602E982',\n",
+       "  'sequence': 0,\n",
+       "  'reminders': {'useDefault': True},\n",
+       "  'eventType': 'default'}]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "events"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "907115d7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "import re\n",
+    "\n",
+    "def filter_meeting_events(events):\n",
+    "    \"\"\"\n",
+    "    Filters events to include only those with valid meeting links.\n",
+    "\n",
+    "    Args:\n",
+    "        events (list): A list of event dictionaries.\n",
+    "\n",
+    "    Returns:\n",
+    "        list: A list of events that contain a meeting link.\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    return [\n",
+    "        event for event in events\n",
+    "        if get_meeting_link(event)\n",
+    "    ]\n",
+    "\n",
+    "def get_meeting_link(event):\n",
+    "    # Check for 'hangoutLink' in the event\n",
+    "    if 'hangoutLink' in event and event['hangoutLink']:\n",
+    "        print(\"Found hangoutLink:\", event['hangoutLink'])\n",
+    "        return event['hangoutLink']\n",
+    "    \n",
+    "    # Define a regex pattern to match valid meeting URLs, allowing optional query parameters\n",
+    "    meeting_url_pattern = re.compile(r'(https?://(?:meet\\.google\\.com|zoom\\.us|teams\\.microsoft\\.com)/[\\w\\-./?=&%]+)')\n",
+    "\n",
+    "    \n",
+    "    # Check for a meeting link in the 'description'\n",
+    "    if 'description' in event:\n",
+    "        match = meeting_url_pattern.search(event['description'])\n",
+    "        if match:\n",
+    "            print(\"Found link in description:\", match.group(0))\n",
+    "            return match.group(0)\n",
+    "        \n",
+    "    # Check for a meeting link in the 'location'\n",
+    "    if 'location' in event:\n",
+    "        print(event['location'])\n",
+    "        match = meeting_url_pattern.search(event['location'])\n",
+    "        if match:\n",
+    "            print(\"Found link in location:\", match.group(0))\n",
+    "            return match.group(0)\n",
+    "    \n",
+    "    # Return an empty string if no meeting link is found\n",
+    "    print(\"No meeting link found.\")\n",
+    "    return \"\"\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "7786562b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No meeting link found.\n",
+      "https://us05web.zoom.us/j/87150720918?pwd=HZabaLMR3mUi7aJL2YO6uCN5jHvuCb.1\n",
+      "No meeting link found.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "filter_meeting_events(events)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fb6d9f2d",
    "metadata": {},
    "outputs": [],
    "source": []
